@@ -3,6 +3,7 @@
 * 1 minor enhancement:
   * added cache highlighting à la Google
   * rake index:update implemented as described in Ferret book by David Balmain
+  * rake index:prune removes missing files from indexer.
 
 == 0.1.6  2008-04-25
 
